<resources>
    <string name="app_name">NCT Ultra</string>
    <string name="string_error">Fail to load data</string>
    <string name="string_html"><![CDATA[&#8226]]></string>
    <string name="string_all_music">All music</string>
    <string name="string_audio">All audio</string>
    <string name="string_ambient">Ambient</string>
    <string name="string_contry">Country</string>
    <string name="string_rock">Rock</string>
    <string name="string_classical">Classical</string>
    <string name="string_suggeted_playlist">SUGGESTED PLAYLIST</string>
    <string name="string_my_music">My music</string>
    <string name="string_discover">Discover</string>
    <string name="string_chart">Chart</string>
    <string name="string_user">User</string>
    <string name="string_setting">Setting</string>
    <string name="string_song">SONG</string>
    <string name="string_now_playing">NOW PLAYING</string>
    <string name="string_time_start">00:00</string>
    <string name="string_add_to_playlist">Add to playlist</string>
    <string name="string_information">Information</string>
    <string name="string_download">Download</string>
    <string name="string_add_to_favorite">Add to favorite</string>
    <string name="string_share">Share</string>
    <string name="string_upload_date">Upload Date:</string>
    <string name="string_no_input">No value input</string>
    <string name="string_find">Tìm kiếm bài hát yêu thích</string>
    <string name="string_keyword">Từ khoá</string>
    <string name="alert_permissions_rationale">Ứng dụng cần truy cập vào bộ nhớ thiết bị</string>
    <string name="string_confirm">YES</string>
    <string name="string_notification_name">Notification Ultra</string>
    <string name="string_notification_description">Notification for Ultra NCT</string>
</resources>
