<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_now_playing"
    tools:context=".ui.nowplaying.NowPlayingActivity">

    <ImageButton
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_24"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_back"
        android:tint="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textNowPlaying"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:gravity="center"
        android:text="@string/string_now_playing"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/buttonBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageSong"
        android:layout_width="@dimen/dp_256"
        android:layout_height="@dimen/dp_256"
        android:contentDescription="@string/app_name"
        android:src="@drawable/bg_default_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNowPlaying"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/textSongName"
        android:layout_width="@dimen/dp_200"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp_16"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/buttonOption"
        app:layout_constraintStart_toEndOf="@+id/buttonFavourite"
        app:layout_constraintTop_toBottomOf="@+id/imageSong"
        tools:text="@tools:sample/first_names" />

    <TextView
        android:id="@+id/textArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_4"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSongName"
        tools:text="@tools:sample/last_names" />

    <TextView
        android:id="@+id/textSongCurrent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_32"
        android:layout_marginBottom="@dimen/dp_16"
        android:text="@string/string_time_start"
        android:textColor="@color/color_white"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toStartOf="@+id/buttonPrevious"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/buttonNext"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/app_name"
        android:tint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/textSongCurrent"
        app:layout_constraintEnd_toStartOf="@+id/textSongDuration"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonPlay"
        app:layout_constraintTop_toTopOf="@+id/textSongCurrent"
        app:srcCompat="@drawable/ic_next" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tint="@android:color/white"
        app:backgroundTint="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/textSongCurrent"
        app:layout_constraintEnd_toStartOf="@+id/buttonNext"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonPrevious"
        app:layout_constraintTop_toTopOf="@+id/textSongCurrent"
        app:srcCompat="@drawable/ic_pause" />

    <ImageButton
        android:id="@+id/buttonPrevious"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/app_name"
        android:tint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/textSongCurrent"
        app:layout_constraintEnd_toStartOf="@+id/buttonPlay"
        app:layout_constraintStart_toEndOf="@+id/textSongCurrent"
        app:layout_constraintTop_toTopOf="@+id/textSongCurrent"
        app:srcCompat="@drawable/ic_previous" />

    <TextView
        android:id="@+id/textSongDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_32"
        android:textColor="@android:color/white"
        app:layout_constraintBaseline_toBaselineOf="@+id/textSongCurrent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonNext"
        tools:text="4:20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <ImageButton
        android:id="@+id/buttonShuffe"
        android:layout_width="?attr/actionBarSize"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_8"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/app_name"
        android:tint="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/buttonPrevious"
        app:layout_constraintEnd_toStartOf="@+id/seekSongProcess"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_shuffle" />

    <SeekBar
        android:id="@+id/seekSongProcess"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:progressTint="@android:color/holo_red_dark"
        android:thumbTint="@android:color/holo_red_dark"
        app:layout_constraintBottom_toBottomOf="@+id/buttonShuffe"
        app:layout_constraintEnd_toStartOf="@+id/buttonLoop"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonShuffe"
        app:layout_constraintTop_toTopOf="@+id/buttonShuffe" />

    <ImageButton
        android:id="@+id/buttonLoop"
        android:layout_width="?attr/actionBarSize"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginEnd="@dimen/dp_8"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/app_name"
        android:tint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/buttonShuffe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/seekSongProcess"
        app:layout_constraintTop_toTopOf="@+id/buttonShuffe"
        app:srcCompat="@drawable/ic_loop" />

    <ImageButton
        android:id="@+id/buttonFavourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/app_name"
        android:tint="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageSong"
        app:srcCompat="@drawable/ic_favourite" />

    <ImageButton
        android:id="@+id/buttonOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/app_name"
        android:tint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageSong"
        app:srcCompat="@drawable/ic_option" />

</androidx.constraintlayout.widget.ConstraintLayout>
